--- a/BobManager.Client/client/src/app/home/home.component.html
+++ b/BobManager.Client/client/src/app/home/home.component.html
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="content">
     <div class="logo">
-      <a href="#" >
+      <a href="#">
         <img src="assets/png/main-logo.png" />
       </a>
     </div>
-    <div class="row m-l-10 m-r-10 cards-background">
+    <div class="row m-l-10 m-r-10">
       <div class="col-xl-4 col-md-6 col-sm-12 m-t-30">
         <div class="card">
           <div class="card-header text-center">
