--- a/BobManager.Client/client/src/app/home/home.component.html
+++ b/BobManager.Client/client/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="content">
     <div class="logo">
       <a href="#">
-        <img src="assets/png/main-logo.png"/>
+        <img src="assets/png/home/main-logo.png"/>
       </a>
     </div>
     <div class="row m-l-10 m-r-10">
