--- a/BobManager.Client/client/src/app/wallet-module/wallet-list/wallet-list.component.html
+++ b/BobManager.Client/client/src/app/wallet-module/wallet-list/wallet-list.component.html
@@ -1,6 +1,6 @@
-<div class="row">
-    <div *ngFor="let wallet of wallets" class="col-lg-4 col-md-6 col-sm-12">
-        <app-wallet-item [item]=wallet></app-wallet-item>
+<div class="container">
+    <div class="row">
+        <app-wallet-item *ngFor="let wallet of wallets" class="col-xl-8  offset-xl-3 offset-md-3" [item]=wallet></app-wallet-item>
     </div>
 </div>
 
