--- a/BobManager.Client/client/src/app/footer/footer.component.html
+++ b/BobManager.Client/client/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small blue pt-4 fixed-bottom">
+<div class="page-footer font-small blue pt-4 fixed-bottom">
   <div class="container-fluid text-center text-md-left">
     <div class="row">
       <div class="offset-1 col-md-4 mt-md-0 mt-3">
@@ -45,4 +45,4 @@
   <div class="footer-copyright text-center py-3">© 2019 Copyright:
     <a href="https://github.com/NerevitVasyan/BobManager"> Step_Students_IT</a>
   </div>
-</footer>
+</div>
