--- a/BobManager.Client/client/src/app/wallet-module/add-wallet/add-wallet.component.html
+++ b/BobManager.Client/client/src/app/wallet-module/add-wallet/add-wallet.component.html
@@ -1,24 +1,3 @@
-<!-- <div class="row">
-    <select [(ngModel)]="category" id="select-state" placeholder="Pick a state..." class="col-3">
-        <option *ngFor="let category of walletsCategories" [value]=category.name>{{category.name}}
-        </option>
-
-    </select>
-    <div class="col-3">
-        <p>Des</p>
-        <input type="text" id="des" class="form-control">
-        <p>Value</p>
-        <input type="numder" id="value" class="form-control" [(ngModel)]="wallet.value">
-        <p>Userid</p>
-        <input type="text" id="userid" class="form-control">
-        <p>Date</p>
-        <input type="date" class="form-control" [(ngModel)]="wallet.date">
-        <input type="button" class="form-control">
-    </div>
-</div> -->
-
-
-
 <div class="container">
     <div class="form-group">
         <label for="exampleFormControlInput1">Spending Value</label>
@@ -26,7 +5,7 @@
             placeholder="123">
     </div>
     <div class="form-group">
-        <label for="exampleFormControlSelect1">Example Category</label>
+        <label for="exampleFormControlSelect1">Category</label>
         <select [(ngModel)]="category" class="form-control" id="exampleFormControlSelect1"
             placeholder="Pick a category...">
             <option *ngFor="let category of walletsCategories" [value]=category.name>{{category.name}}</option>
@@ -40,5 +19,6 @@
         <textarea [(ngModel)]="wallet.description" class="form-control" id="exampleFormControlTextarea1"
             rows="3"></textarea>
     </div>
-    <button type="submit" class="btn btn-primary" (click)="addClick()">Add new</button>
+    <button type="button" class="btn btn-primary btn-lg btn-block" (click)="addClick()">Add new Spending</button>
+    <button type="button" class="btn btn-secondary btn-lg btn-block" (click)="cancelClick()">Cancel</button>
 </div>
